--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>malibu</title>     <link rel="icon" href="favicon.ico" type="image/x-icon">
     
 </head>
 <body>
@@ -86,4 +86,5 @@ if (event.key === "Enter"&&input.value!='') {
 
     </script>
 </body>
+
 </html>
